# opencode-py

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.ru.md  RELEASE.md  SECURITY.md  VERIFY.md  demo.py  live.py  live_async.py  live_ephemeral_ports.py  live_raw.py  live_stream_events.py  live_streaming.py  pyproject.toml  test_all.py  test_live.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: opencode-docs-ru.md
scripts/: check-release.py  check-upstream.py
src/opencode/: __init__.py  __main__.py  _async_client.py  _async_opencode.py  _async_session.py  _binary.py  _client.py  _errors.py  _logs.py  _models.py  _opencode.py  _process.py  _response_models.py  _server.py  _session.py  _stream_events.py  _tools.py  _types.py
tests/: test_async_client.py  test_client.py  test_opencode.py
tests/docker/: Dockerfile  test_smoke.py
web/: index.html  server.py
