[project]
name = "opencode-ai"
version = "0.1.0"
description = "Python SDK for Opencode — the open source AI coding agent"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Anomaly", email = "hello@opencode.ai" },
]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
  "build>=1.0",
  "twine>=4.0",
]

[project.urls]
Homepage = "https://opencode.ai"
Repository = "https://github.com/anomalyco/opencode"
Documentation = "https://opencode.ai/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
