[project]
name = "opencode-py"
version = "0.3.0"
description = "Python SDK for Opencode — the open source AI coding agent"
readme = "README.md"
long_description_content_type = "text/markdown"
license = { text = "MIT" }
keywords = ["opencode", "ai", "sdk", "coding-agent", "llm", "python-sdk"]
authors = [
  { name = "Sergey Kislyakov", email = "s.kislyakov84@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "typing-extensions>=4.6.0",
  "pydantic>=2.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21",
  "httpx>=0.27.0",
  "build>=1.0",
  "twine>=4.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/skislyakow/opencode-py"
Repository = "https://github.com/skislyakow/opencode-py"
Documentation = "https://github.com/skislyakow/opencode-py"
Changelog = "https://github.com/skislyakow/opencode-py/blob/main/CHANGELOG.md"

[project.scripts]
opencode-py = "opencode.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/opencode/_response_models.py" = ["N815"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = "src/opencode"

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "untyped-decorator"

[tool.pytest.ini_options]
testpaths = ["tests"]
